docs/css/styles.css
/* ... */
h2 a.active {
  color: red; /* actieve linkkleur */
  font-weight: bold; /* optioneel */
}

/* Slideshow */

.slideshow {
    padding-top: 60px;
    width: 100%;
    height: 500px;
    position: relative;
    overflow: hidden;
}

.slide {
    position: absolute;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 0;
    transition: opacity 1s ease-in-out;
    z-index: 0;
}

.slide.active {
    opacity: 1;
    z-index: 1;
}

/* Font selector */

.font-selector {
    padding: 30px;
}
.font-selector a {
    text-decoration: none;
}


/* Image cells */

.titleImage {
    margin-top: 20px; 
    padding-top: 30px;
    width: 100%; 
    height: 400px; 
    background-size: contain;
    background-position: center;
    background-repeat: repeat;
}
.titleImageSmall {
    margin-top: 20px; 
    padding-top: 30px;
    width: 100%; 
    height: 350px; /* Fitting Bitcount animations */
    background-size: contain;
    background-position: center;
    background-repeat: repeat;
}

div.image {
    width: 98%;
    height: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    z-index: 0;
    padding: 0;
}

/* Pop-up */
.popup {
  display: none; 
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6); 
  animation: fadeIn .4s forwards;
  z-index: 10000;
}

.store-modal__container__background {
    animation: fadeIn .5s forwards;
}

.store-modal__container__overlay {
    z-index: 1000000000;
}

.popup-content {
  background-color: #202020;
  margin-top: 70px;
  margin-left:250px;
  padding: 10px;
  padding-right:30px;
  padding-bottom:0px;
  width: 300px;
  max-width: 300px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  position: relative;
  animation: slideDown .3s forwards;
}

.popup-content .column {
  background-color: #202020;    
}

.popup-content .column a {
  color: white;    
}

.popup-contentp a:link, .popup-contentp a:visited, .popup-contentp a:active {
    text-decoration: none;
    color: #E31C79;  
}
.popup-contentp p a:hover {
    color: #E31C79;  
}

.familyName:hover, .close:hover, .menuBox .close:hover, .navbar a:hover,
.popup-content:hover .column a:hover {
    color: #E31C79;  
}

.close {
  position: absolute;
  top: 10px;
  right: 20px;
  font-size: 30pt;
  font-weight: bold;
  color: white;
  cursor: pointer;
}

.menuBox .close{
  font-size: 30pt;
  color: black;   
  font-weight: regular;
  animation: fadeIn 2.7s ease-out forwards;
}

.row {
  display: flex;
  flex-wrap: wrap;
}

.column {
    flex: 1;
    width: 50%;
    min-width: 300px;
    box-sizing: border-box;
    background-color: #F0F0F0;
}

.topline {
    border-top: 1px solid #202020;
}
.column p {
    margin: 0 40px 0 0;
}

.column14{
    width: 25%;
    min-width: 250px;     
    padding-left: 20px;
    padding-right: 20px;
    box-sizing: border-box;
    background-color: #F0F0F0;
}

.column34 {
    flex: 1;
    padding-right: 20px;
    padding-left: 10px;
    box-sizing: border-box;
    background-color: #F0F0F0;
}

.column13 {
    /*flex: 1;*/
    width: 33%;
    padding-right: 12px;
    box-sizing: border-box;
    background-color: #F0F0F0;
}
.column23 {
    /*flex: 1;*/
    width: 66%;
    padding-right: 12px;
    box-sizing: border-box;
    background-color: #F0F0F0;
}

.ab{
    background-color: #F0F0F0;
    padding-bottom: 20px;
}

.sticky {
  position: sticky;
  top: 85px;
  height: auto;
}

.sticky img {
    width:100%;
}

/* Basis sectie */

.section-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 3rem;
}

.interview {
    border-top: 1px solid gray;
    display: grid;
    gap: 0px;
    margin-bottom: 10px;
}

/* Afbeeldingen */
.img-banner {
    width: 100%;
    height: auto;
    display: block;
    border-radius: 5px;
}

/* Variant: 2 images onder tekst */
.image-row {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
}

/* Variant: 50% content blocks */
.interview--grid {
    grid-template-columns: repeat(2, 1fr);
}

.content-block {
    display: grid;
    gap: 1rem;
    text-decoration: none;
    color: inherit;
}

.img-mask {
    position: relative;
    width: 100%;
    aspect-ratio: 16 / 9; /* pas aan indien nodig */
    overflow: hidden;
}

/* Afbeelding vult het masker */
.img-mask img {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.sectionNav {
    position: fixed;
    top: 70px;
    left: 0;
    right: 0;
    width: 100%;
    z-index: 1000;

    background-color: #F0F0F0;      
    border-bottom: 1px solid #202020;
    box-shadow: 0 14px 16px rgba(0, 0, 0, 0.2);

    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease;
    line-height: 0px;
}

.sectionNavList a {
  color: #555;
  text-decoration: none;
  transition: color 0.2s ease;
}

.sectionNavList a.active {
    color: #E31C79;
}

.sectionNav.is-visible {
    opacity: 1;
    pointer-events: auto;
}

.sectionNavList {
    width:100%;
    max-width: 1200px;     
    margin: 0;      
    padding-top: 0px;     
    padding-left: 20px;     
    padding-bottom: 15px; 
    list-style: none;
    display: flex;
    flex-direction: column;
    font-size: 1.5em;
}

.sectionNavList H2 {
    padding:2px;
    padding-bottom:5px;
    padding-left:15px;
}

.features{
    border-top: 1px solid gray;
    padding-bottom: 15px;
}

div.responsiveShow {
    display: none;
}

/* Footer */
footer {
    border-top: 1px solid lightgray;
    text-align: center;
    padding-top: 20px;
    padding-bottom: 1em;
    background-color: white;
    color: #333;
    width: 100%;
}
footer p {
    font-size: 1em;
    margin: 0;
}

/* Type testers */

div.type-tester {
    padding: 1em;
    width: 100%;
    box-sizing: border-box;
}
/* ... */

